--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,8 @@
         <title>My First View!!</title>
     </head>
     <body>
+      
+        <%= "I love " + "Ruby!!" %>
 
         <h1>Buster's Best Bowling Alley</h1>
         <h2>Bet You Can't Bowl A Strike Every Time</h2>
